# AI-Conversation-Summarizer-API

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/routers/: conversations.py
app/services/: aiService.py  conversationService.py
docs/superpowers/specs/: 2026-04-29-conv-summarizer-design.md
scripts/: entrypoint.sh
tests/: conftest.py  test_aiService.py  test_endpoints.py  test_errors.py
